[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "scspell3k"
description = "A conservative interactive spell checker for source code."

version = "2.3.0"
license = "GPL-2.0-only"
readme  = "README.rst"

classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development',
    'Topic :: Text Processing :: Linguistic',
    'Topic :: Utilities']

[project.urls]
GitHub = "https://github.com/myint/scspell"

[project.scripts]
scspell = "scspell:main"
